CHANGES
=======

* update
* update the code
* update the style
* update the code
* update the code
* update the readme
* update the tox.ini
* update the code
* update the code
* update the code
* update
* update
* update
* update the code
* add video input to inference
* add video input to inference
* Update README.md