@@ -74,14 +74,14 @@ names= {
 #set this variable to true and pass the path to your model directory on the nextcloud
 #in the remote variable 
 [use_rclone]
-value=  True #possible value: True, False
+value=  Flase #possible value: True, False
 
 [remote]
 # Directory containing trained model for prediction  on the nextcloud  
 path = models_sub
 
 #If you have already configured the rclone, just leave 
-#these variables untouched, otherwise please specify them.
+#these variables untouched, otherwise if you want to use rclone, please specify them.
 [RCLONE_CONFIG_RSHARE_PASS]
 #Rclone password
 password= <password> # replce with your  password
