@@ -1,6 +1,10 @@
 CHANGES
 =======
 
+* update readme
+* update readme
+* add rclone cofing to setting.ini
+* add rclone cofing to setting.ini
 * update
 * update the code
 * update the style
